<resources>
    <string name="app_name">travelsafe</string>
    <string name="intro_hello">Welcome!</string>
    <string name="intro_signIn">Sign In</string>
    <string name="intro_signUp1">Don\'t have an account?</string>
    <string name="intro_signUp2">Sign up</string>
    <string name="signUp_name">Full Name</string>
    <string name="signUp_email">Email ID</string>
    <string name="signUp_password">Password</string>
    <string name="signUp_signUp">Sign Up</string>
    <string name="signUp_signIn1">Already have an account?</string>
    <string name="signUp_signIn2">Sign in</string>
    <string name="signUp_signIn3">sign up with</string>
    <string name="noInternet_pleaseCheckInternet">Please check your internet connection!</string>
    <string name="main_noInternet">Please turn on your internet connection\n and restart the app!</string>
    <string name="signUp_signUpError1">Something went wrong!</string>
    <string name="signUp_signUpError2">Please try signing up again</string>
    <string name="signUp_enterName">Please enter your name</string>
    <string name="signUp_enterEmail">Please enter your email.</string>
    <string name="stignUp_enterPassword">Please enter a password</string>
    <string name="signUp_noInternet">No internet!</string>
    <string name="signIn_logInToContinue">SignIn to continue!</string>
    <string name="signIn_email">Email ID</string>
    <string name="signIn_password">Password</string>
    <string name="signIn_keepSignedIn">Keep me signed in</string>
    <string name="signIn_forgotPassword">Forgot your password?</string>
    <string name="signIn_signIn">Sign In</string>
    <string name="signIn_signUp1">Don\'t have an account?</string>
    <string name="signIn_signUp2">Sign up</string>
    <string name="signIn_signIn3">sign in with</string>
    <string name="signIn_verifyEmail1">Please verify your email using the</string>
    <string name="signIn_verifyEmail2">verification link sent</string>
    <string name="signIn_resetPassword">Please reset your password</string>
    <string name="signIn_enterEmail">Please enter email</string>
    <string name="signIn_enterPassword">Please enter password</string>
    <string name="signIn_verifyEmailBeforeSignin">Please verify your email before signing in.</string>
    <string name="signIn_invalidCredentials">Invalid credentials</string>
    <string name="signIn_noInternet">No internet!</string>
    <string name="welcome_welcomeName">Welcome</string>
    <string name="welcome_home">home</string>
    <string name="welcome_startJourney">Start Travel</string>
    <string name="welcome_trackJourney">Track Travel</string>
    <string name="welcome_trackWard">Track</string>
    <string name="guard_enterSource">From</string>
    <string name="guard_enterDestination">To</string>
    <string name="guard_eta">ETA:</string>
    <string name="guard_GPSTracking">Turn on GPS</string>
    <string name="guard_selectGuardians">Select Followers</string>
    <string name="guard_validSource">Please enter a valid source first</string>
    <string name="guard_validDestination">Please enter a valid destination</string>
    <string name="guard_selectRoute">Please select a route</string>
    <string name="guard_yourLocation">Your location</string>
    <string name="guard_routesFound">routes found. Please select one.</string>
    <string name="selectGuardian_createJourney">Create Journey</string>
    <string name="selectGuardian_selectAtleastOneGuardian">Please select atleast one follower!</string>
    <string name="selectGuardian_noFriends">Select atleast one follower to start the travel</string>
    <string name="journey_enterSource">Enter source</string>
    <string name="journey_enterDestination">Enter destination</string>
    <string name="journey_eta">ETA:</string>
    <string name="journey_finishJourney">Finish Journey</string>
    <string name="journey_stopJourney">Stop Journey</string>
    <string name="journey_wardStartedJourney">started a journey</string>
    <string name="journey_goHome">Go Home</string>
    <string name="trackJourney_enterSource">Enter source</string>
    <string name="trackJourney_enterDestination">Enter destination</string>
    <string name="trackJourney_stopTracking">Stop Tracking</string>
    <string name="trackJourney_eta">ETA:</string>
    <string name="trackJourney_goHome">Go home</string>
    <string name="trackJourney_onlyGuardian">You are the only guardian for this journey. Can\'t stop</string>
    <string name="profile_statusActive">Active status</string>
    <string name="profile_accountSettings">Account Settings</string>
    <string name="profile_Notifications">Notifications</string>
    <string name="profile_permissions">Permissions</string>
    <string name="profile_JourneyHistory">Journey History</string>
    <string name="profile_more">More</string>
    <string name="profile_language">Language</string>
    <string name="profile_help">Support</string>
    <string name="profile_logout">logout</string>
    <string name="comingSoon_comingSoon">Coming Soon...</string>
    <string name="locationTracking_journeyInProgress">Journey in progress</string>
    <string name="locationTracking_locationIsBeingTracked">Your location is being tracked</string>
    <string name="locationTracking_journeyFinished">Journey finished</string>
    <string name="locationTracking_journeyHasComeToEnd">Your journey has come to an end. Thank you</string>
    <string name="locationTracking_routeDeviation">Route Deviation</string>
    <string name="locationTracking_backToSelectedRoute">You are back to the selected route.</string>
    <string name="locationTracking_deviatedFromSelectedRoute">You are deviating from the selected route.</string>
    <string name="guardianAdded_journeyPaused">Journey paused</string>
    <string name="guardianAdded_takingBreak">is taking a break.</string>
    <string name="guardianAdded_journeyResumed">Journey resumed</string>
    <string name="guardianAdded_resumedJourney">has resumed the journey.</string>
    <string name="guardianAdded_warning">WARNING</string>
    <string name="guardianAdded_wardInDanger">is in DANGER!</string>
    <string name="guardianAdded_journeySuccessful">Journey successful</string>
    <string name="guardianAdded_wardReachedDestinationSafely">has reached the destination safely</string>
    <string name="guardianAdded_journeyStopped">Journey stopped</string>
    <string name="guardianAdded_wardStoppedJourney">has stopped the journey</string>
    <string name="welcome_pressHoldInEmergency">Press and hold in case of emergency</string>
    <string name="welcome_noOngoingJourney">No Ongoing Journey</string>
    <string name="welcome_holdFor2Seconds">Press and hold for 2 seconds</string>
    <string name="welcome_guardianAlerted">Guardian Alerted!</string>
    <string name="welcome_pressAgainToExit">Press Back Again to Exit</string>
    <string name="journey_pressHoldInEmergency">Press and hold in case of emergency</string>
    <string name="journey_holdFor2Seconds">Press and hold for 2 seconds</string>
    <string name="journey_guardianAlerted">Guardian Alerted!</string>
    <string name="trackJourney_noOngoingJourney">No ongoing journey</string>
    <string name="trackJourney_stoppedTracking">Stopped tracking</string>
    <string name="resetPassword_enterEmail">Enter email to reset password</string>
    <string name="resetPassword_Reset">Reset</string>
    <string name="resetPassword_validEmail">Please enter valid email</string>
    <string name="resetPassword_resetLinkSent">Password reset link sent to email</string>
    <string name="resetPassword_somethingWentWrong">Something went wrong</string>
    <string name="changePassword_confirm">confirm password</string>
    <string name="changePassword_new">new password</string>
    <string name="changePassword_old">old password</string>
    <string name="changePassword_change">Change your password</string>
    <string name="friendslist_Friends">Friends</string>
    <string name="friendsList_somethingWentWrong">Oops... Something went wrong</string>
    <string name="friendsList_pressHoldInEmergency">Press and hold in case of emergency</string>
    <string name="friendsList_noOngoingJourney">No Ongoing Journey</string>
    <string name="friendsList_holdFor2Seconds">Press and hold for 2 seconds</string>
    <string name="friendsList_guardianAlerted">Guardian Alerted!</string>
    <string name="selectGuardianRecycleView_alreadyTracking">Selected Guardian is tracking another user</string>
    <string name="contactsList_contacts">contacts</string>
    <string name="contactsListActivity_SearchContacts">Search contacts</string>
    <string name="contactsListRecyclerView_friendAdded">Friend added!</string>
    <string name="contactsListRecyclerVIew_alreadyAdded">Already Added!</string>
    <string name="selectGuardian_somethingWentWrong">Oops... Something is wrong</string>
    <string name="guard_addETA">Enter time (in min) to add to ETA:</string>
    <string name="journey_guard">guard</string>
    <string name="Feel_less_stressed_quote">Feel less stressed and more secured with travelsafe</string>
    <string name="profile_notify_journeyNotificationsGPSon">Journey GPS on</string>
    <string name="profile_notify_journeyInProgress">journey in progress</string>
    <string name="profile_notify_journeyPaused">journey paused</string>
    <string name="profile_notify_journeyResumed">journey resumed</string>
    <string name="profile_notify_journeySuccessful">journey successful</string>
    <string name="profile_notify_journeyNotificationsGPSoff">Journey GPS off</string>
    <string name="profile_notify_journeyCheckPointAdded">checkpoint added</string>
    <string name="profile_notify_journeyStopped">journey stopped</string>
    <string name="profile_notify_journeyFinished">journey finished</string>
    <string name="profile_notify_journeyMiscellaneous">Miscellaneous</string>
    <string name="profile_notify_journeyRouteDeviation">route deviation</string>
    <string name="profile_notify_journeyETA">ETA alert</string>
    <string name="profile_notify_journeyGuardian">guardian added</string>
    <string name="profile_notify_journeySOS">SOS alert</string>
    <string name="profile_permissions_LocationServices">Location Services</string>
    <string name="profile_permissions_LocationSharing">Location sharing</string>
    <string name="profile_permissions_Contacts">Contacts Services</string>
    <string name="profile_permissions_ContactsSharing">Contacts sharing</string>
    <string name="profile_permissions_SMSServices">SMS Services</string>
    <string name="profile_permissions_SMS">SMS</string>
    <string name="profile_JourneyHistory_myJourneys">My Journeys</string>
    <string name="toast_noLanguageSwitchingSupport">Please change your phone language settings</string>
    <string name="guardianAdded_backToSelectedRoute">is back to the selected route.</string>
    <string name="guardianAdded_routeDeviation">Route Deviation</string>
    <string name="guardianAdded_deviatedFromSelectedRoute">has deviated from the selected route</string>
    <string name="welcome_youAreGuardian">You are added as a Guardian to a journey</string>
    <string name="welcome_guardianAdded">Guardian added</string>
    <string name="locationTrakcing_journeyProgress">Journey Progress</string>
    <string name="locationTracking_distance25P">has finished 25% of the journey successfully.</string>
    <string name="locationTracking_distance50P">has finished 50% of the journey successfully.</string>
    <string name="locationTracking_distance75P">has finished 75% of the journey successfully</string>
    <string name="profile_notify_distance25P">Journey 25% complete</string>
    <string name="profile_notify_distance50P">Journey 50% complete</string>
    <string name="profile_notify_distance75P">Journey 75% complete</string>
    <string name="profile_cannotLogout">Cannot logout with ongoing journey</string>
</resources>